<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group />
    <item
        android:id="@+id/homeFragment"
        android:title="@string/title_home"
        android:icon="@drawable/home"/>
    <item
        android:id="@+id/cardFragment"
        android:title="@string/title_card"
        android:icon="@drawable/cart"/>
    <item
        android:id="@+id/searchFragment"
        android:title="@string/title_search"
        android:icon="@drawable/search"/>
    <item
        android:id="@+id/historyFragment"
        android:title="@string/title_history"
        android:icon="@drawable/history"/>
    <item
        android:id="@+id/profileFragment"
        android:title="@string/title_profile"
        android:icon="@drawable/user"/>
</menu>